tests/baselines/reference/tooManyTypeParameters1.errors.txt
==== tests/cases/compiler/tooManyTypeParameters1.ts (4 errors) ====
    function f<T>() { }
    f<string, string>();
    ~
!!! error TS4027: Signature expected 1 type arguments, got 2 instead.
    
    var x = <T>() => {};
    x<number,number>();
    ~
!!! error TS4027: Signature expected 1 type arguments, got 2 instead.
    
    class C<T> {}
    var c = new C<Date,Date>();
                ~
!!! error TS4027: Signature expected 1 type arguments, got 2 instead.
    
    interface I<T> {}
    var i: I<number,number>;
           ~~~~~~~~~~~~~~~~
!!! error TS2090: Generic type 'I<T>' requires 1 type argument(s).